Move motor.h to ../include/ and rectify typos
* Rectify typos in
	# motor.h
	# motor.c
	# lcd_init.1  (man page of lcd_init())

--- a/AntzBBB/Documentation/man-pages/lcd_init.1
+++ b/AntzBBB/Documentation/man-pages/lcd_init.1
@@ -11,7 +11,7 @@
 
 .TH LCD_INIT 3 "03-22-2016" "LCD" "version 1.0"
 .SH NAME
-lcd_init() - destructor of lcd subsystem
+lcd_init() - constructor of lcd subsystem
 
 .SH SYNOPSIS
 .B #include "lcd.h"
