Trivial changes in man pages

--- a/AntzBBB/Documentation/man-pages/init_all_segments.3
+++ b/AntzBBB/Documentation/man-pages/init_all_segments.3
@@ -13,7 +13,7 @@
 .SH NAME
 init_all_segments - initializes all the segments the screen
 .SH SYNOPSIS
-.B #include "lcd.h"
+.B #include <lcd.h>
 .sp
 .BI "void init_all_segments()"
 
