--- a/AntzBBB/Documentation/man-pages/invert_color.3
+++ b/AntzBBB/Documentation/man-pages/invert_color.3
@@ -13,7 +13,7 @@
 .SH NAME
 invert_color - inverts the colors on the screen
 .SH SYNOPSIS
-.B #include "lcd.h"
+.B #include <lcd.h>
 .sp
 .BI "void invert_color()"
 
