--- a/AntzBBB/Documentation/man-pages/lcd_deinit.3
+++ b/AntzBBB/Documentation/man-pages/lcd_deinit.3
@@ -13,7 +13,7 @@
 .SH NAME
 lcd_deinit() - destructor of lcd subsystem
 .SH SYNOPSIS
-.B #include "lcd.h"
+.B #include <lcd.h>
 .sp
 .BI "void lcd_deinit()"
 
