--- a/AntzBBB/Documentation/man-pages/lcd_printf.3
+++ b/AntzBBB/Documentation/man-pages/lcd_printf.3
@@ -13,7 +13,7 @@
 .SH NAME
 lcd_printf - a libc printf like function for formatted output conversion
 .SH SYNOPSIS
-.B #include "lcd.h"
+.B #include <lcd.h>
 .sp
 .BI "int lcd_printf(const char *fmt, ...)"
 
