--- a/AntzBBB/Documentation/man-pages/lcd_write_cmd.3
+++ b/AntzBBB/Documentation/man-pages/lcd_write_cmd.3
@@ -13,7 +13,7 @@
 .SH NAME
 lcd_write_cmd - sends the specified command to the lcd
 .SH SYNOPSIS
-.B #include "lcd.h"
+.B #include <lcd.h>
 .sp
 .BI "void lcd_write_cmd(uint8_t cmd)"
 
