--- a/AntzBBB/Documentation/man-pages/lcd_write_data.3
+++ b/AntzBBB/Documentation/man-pages/lcd_write_data.3
@@ -13,7 +13,7 @@
 .SH NAME
 lcd_write_data - sends the specified one byte of data to the lcd
 .SH SYNOPSIS
-.B #include "lcd.h"
+.B #include <lcd.h>
 .sp
 .BI "void lcd_write_data(uint8_t data)"
 
