--- a/AntzBBB/Documentation/man-pages/motor_deinit.3
+++ b/AntzBBB/Documentation/man-pages/motor_deinit.3
@@ -14,7 +14,7 @@
 motor_deinit() - destructor of motor subsystem
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "void motor_deinit()"
 
