--- a/AntzBBB/Documentation/man-pages/move_backward.3
+++ b/AntzBBB/Documentation/man-pages/move_backward.3
@@ -14,7 +14,7 @@
 move_backword() - move the robot backword
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "void move_backword(char *speed)"
 
