--- a/AntzBBB/Documentation/man-pages/set_direction.3
+++ b/AntzBBB/Documentation/man-pages/set_direction.3
@@ -14,7 +14,7 @@
 set_direction() - set the direction of robot's movement
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "int set_direction(int direction)"
 
