--- a/AntzBBB/Documentation/man-pages/set_speed.3
+++ b/AntzBBB/Documentation/man-pages/set_speed.3
@@ -14,7 +14,7 @@
 set_speed() - set the speed of robot's movement
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "int set_speed(char *speed)"
 
