--- a/AntzBBB/Documentation/man-pages/motor_init.3
+++ b/AntzBBB/Documentation/man-pages/motor_init.3
@@ -14,7 +14,7 @@
 motor_init() - constructor of motor subsystem
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "void motor_init()"
 
