--- a/AntzBBB/Documentation/man-pages/move_forward.3
+++ b/AntzBBB/Documentation/man-pages/move_forward.3
@@ -14,7 +14,7 @@
 move_forward() - move the robot forward
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "void move_forward(char *speed)"
 
