--- a/AntzBBB/Documentation/man-pages/turn_right.3
+++ b/AntzBBB/Documentation/man-pages/turn_right.3
@@ -14,7 +14,7 @@
 turn_right() - turn the robot to right
 
 .SH SYNOPSIS
-.B #include "motor.h"
+.B #include <motor.h>
 .sp
 .BI "void turn_right()"
 
