--- a/AntzBBB/Documentation/man-pages/move_backward.3
+++ b/AntzBBB/Documentation/man-pages/move_backward.3
@@ -9,18 +9,18 @@
 .\" This man page documents one of the APIs of one of the subsystems of
 .\" Antz Robots.
 
-.TH MOVE_BACKWORD 3 "03-22-2016" "DC MOTOR" "version 1.0"
+.TH MOVE_BACKWARD 3 "03-22-2016" "DC MOTOR" "version 1.0"
 .SH NAME
-move_backword() - move the robot backword
+move_backward() - move the robot backward
 
 .SH SYNOPSIS
 .B #include <motor.h>
 .sp
-.BI "void move_backword(char *speed)"
+.BI "void move_backward(char *speed)"
 
 .SH DESCRIPTION
-.B move_backword()
-is a function that drives the robot backword with the specified speed. 
+.B move_backward()
+is a function that drives the robot backward with the specified speed. 
 .nf
 The value of speed can be one of the following:
 .in +8n 
